--- a/weekly_mission_2/examples4/package.json
+++ b/weekly_mission_2/examples4/package.json
@@ -5,7 +5,7 @@
     "main": "main.js",
     "type": "module",
     "scripts": {
-      "test": "node ./node_modules/jest/bin/jest.js --runInBand"
+      "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
     },
     "keywords": [],
     "author": "",
